Working with DllPlugin!

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run clean && webpack --config config/webpack.dev.js --progress --profile --bail",
+    "build:dll": "webpack --config config/webpack.dll.js --progress --profile --bail",
     "dev": "webpack-dev-server --config config/webpack.dev.js",
+    "dev:dll": "npm run build:dll && webpack-dev-server --config config/webpack.dev-with-dll.js",
     "clean": "npm run clean:dist && npm run clean:tsc",
     "clean:dist": "rimraf dist",
     "clean:tsc": "rimraf src/**/*.js && rimraf src/**/*.map"
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@types/core-js": "0.9.31",
     "@types/node": "6.0.36",
+    "add-asset-html-webpack-plugin": "1.0.2",
     "angular2-template-loader": "0.5.0",
     "awesome-typescript-loader": "2.2.1",
     "html-webpack-plugin": "^2.22.0",
