--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "add-asset-html-webpack-plugin": "1.0.2",
     "angular2-template-loader": "0.5.0",
     "awesome-typescript-loader": "2.2.1",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "2.22.0",
     "raw-loader": "0.5.1",
     "rimraf": "2.5.4",
     "typescript": "2.0.2",
